Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lvti/badTypeReference/BadTypeReference.out
BadTypeReference.java:14:9: compiler.err.illegal.ref.to.restricted.type: var
BadTypeReference.java:15:21: compiler.err.illegal.ref.to.restricted.type: var
2 errors
